# Versa

./: .gitignore  README.md  pyproject.toml  requirements.txt
mcp_servers/: REMOTE_JUPYTER_MCP.md  VERSA.md  __init__.py  remote_jupyter_mcp_server.py  test_remote_jupyter_mcp_server.py  versa_mcp_server.py
scripts/: kodo_env.bat  kodo_init.bat  kodo_watch_auth.bat  kodo_watch_auth.py  modal_gpu_sleep.py  modal_gpu_smoke.py  modal_sleep.py  modal_square.py
tools/: remote_jupyter_exec.py
versa/: __init__.py  __main__.py  cli.py  config.py  modal_backend.py  modal_file_runner.py  modal_info.py  remote_jupyter_backend.py  test_cli.py  test_remote_jupyter_backend.py  util.py  versa_runner.py
